--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in JAGS 4.3.1
+
+The Windows installer has been updated to work with the new compiler
+for R >= 4.2.0.
+
 Changes in JAGS 4.3.0
 
 Bug fixes
